--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2"
   }
 }
